--- a/netlify.toml
+++ b/netlify.toml
@@ -3,10 +3,7 @@
   command = "yarn run build"
   functions = "netlify/functions"
   publish = "dist"
-
-[functions]
-  directory = "src"
-
+  included_files = ["json_date/cart_items.json"]
 
 
   ## Uncomment to use this redirect for Single Page Applications like create-react-app.
