--- a/netlify.toml
+++ b/netlify.toml
@@ -2,8 +2,7 @@
 [build]
   command = "yarn run build"
   functions = "netlify/functions"
-  publish = "dist"
-  included_files = ["json_date/cart_items.json"]
+  publish = ""
 
 
   ## Uncomment to use this redirect for Single Page Applications like create-react-app.
