mades change to netlify.toml

--- a/netlify.toml
+++ b/netlify.toml
@@ -4,6 +4,18 @@
   functions = "netlify/functions"
   publish = "dist"
 
+[[redirects]]
+  from = "/json_data/cart_items.json"
+  to = "/.netlify/functions/json_data"
+
+[[headers]]
+  for = "/json_data/*"
+  [headers.values]
+    Access-Control-Allow-Origin = "*"
+
+[[functions]]
+  directory = "functions"
+
 
   ## Uncomment to use this redirect for Single Page Applications like create-react-app.
   ## Not needed for static site generators.
