installed test tools

--- a/package.json
+++ b/package.json
@@ -9,12 +9,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^14.0.0",
+    "@testing-library/user-event": "^14.4.3",
     "bootstrap": "^5.2.3",
     "i18next": "^22.4.10",
+    "jsdom": "^21.1.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.2",
     "react-dom": "^18.2.0",
-    "react-i18next": "^12.1.5"
+    "react-i18next": "^12.1.5",
+    "vitest": "^0.29.2"
   },
   "devDependencies": {
     "@types/react": "^18.0.27",
